--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+comtypes==1.4.10
 contourpy==1.3.2
 cycler==0.12.1
 flatbuffers==25.2.10
@@ -35,12 +36,16 @@ pandas==2.2.3
 pillow==11.2.1
 protobuf==4.25.6
 pyarrow==19.0.1
+PyAudio==0.2.14
 pycparser==2.22
 pydeck==0.9.1
 pyparsing==3.2.3
+pypiwin32==223
 pyserial==3.5
 python-dateutil==2.9.0.post0
+pyttsx3==2.98
 pytz==2025.2
+pywin32==310
 referencing==0.36.2
 requests==2.32.3
 rpds-py==0.24.0
